# lpp_boards_pp

./: .bumpversion.cfg  meson.build
.github/workflows/: CI.yml
examples/simple_ui/: main.py
include/: auto_recycled_channel.hpp  concepts.hpp  ftdi.hpp  pcb_lob.hpp  simple_protocol.hpp
pylpp_boards_pp/: __init__.py  pylpp_boards_pp.cpp
src/: ftdi.cpp
tests/pcb_lpp_lob/: main.cpp
